[gd_scene format=3 uid="uid://bo0pwsa6hw5ue"]

[ext_resource type="Script" uid="uid://b6fbiyjuwntgn" path="res://entities/player/scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://ceibfuodxat68" path="res://entities/player/assets/player_sprite02.png" id="2_cvnsp"]
[ext_resource type="PackedScene" uid="uid://bdu6v3fhcn53g" path="res://components/health_component/health_component.tscn" id="3_41mm0"]
[ext_resource type="Texture2D" uid="uid://dk8532p66y8bf" path="res://entities/assets/shadow.png" id="3_ekl84"]
[ext_resource type="Texture2D" uid="uid://ch0gwwm7u37ih" path="res://entities/player/assets/attack_sprite01.png" id="4_ekl84"]
[ext_resource type="Script" uid="uid://0hr7ht1p5pyl" path="res://entities/player/scripts/state_idle.gd" id="6_2suro"]
[ext_resource type="Script" uid="uid://dlyqpe5jh0hs6" path="res://entities/player/scripts/state_walk.gd" id="7_gy3q1"]
[ext_resource type="Script" uid="uid://cdowj2otqtidw" path="res://entities/player/scripts/player_state_machine.gd" id="7_u3c1g"]
[ext_resource type="Script" uid="uid://764wnjlt1epk" path="res://entities/player/scripts/state_attack.gd" id="8_2suro"]
[ext_resource type="AudioStream" uid="uid://bihc3ics5ekta" path="res://entities/player/assets/sword_swoosh.wav" id="11_ekl84"]
[ext_resource type="PackedScene" uid="uid://bha3le6ms846r" path="res://components/hurtboxes/hurt_box.tscn" id="11_oucfp"]
[ext_resource type="PackedScene" uid="uid://bw04c753lmlf3" path="res://components/hitboxes/hit_box.tscn" id="11_vwfor"]
[ext_resource type="Script" uid="uid://cqp7jsw83yljy" path="res://entities/player/scripts/state_stun.gd" id="12_vwfor"]
[ext_resource type="AudioStream" uid="uid://beachdr1o4jr" path="res://entities/player/assets/hit_player.wav" id="13_ekl84"]
[ext_resource type="Script" uid="uid://dv8gwkxct5udq" path="res://entities/player/scripts/state_death.gd" id="13_exelp"]
[ext_resource type="AudioStream" uid="uid://dk3yarmqvn6sl" path="res://entities/assets/Demoman_paincrticialdeath01.wav" id="14_33iwi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ittr2"]
radius = 8.062258

[sub_resource type="Animation" id="Animation_eigjl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_usdan"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_inse1"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2fx0v"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ronts"]
resource_name = "no_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ronts"]
_data = {
&"RESET": SubResource("Animation_eigjl"),
&"attack_down": SubResource("Animation_usdan"),
&"attack_side": SubResource("Animation_inse1"),
&"attack_up": SubResource("Animation_2fx0v"),
&"no_attack": SubResource("Animation_ronts")
}

[sub_resource type="Animation" id="Animation_41mm0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gy3q1"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [21, 23]
}

[sub_resource type="Animation" id="Animation_3mujp"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [27, 29]
}

[sub_resource type="Animation" id="Animation_xvinq"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 26]
}

[sub_resource type="Animation" id="Animation_pt0jy"]
resource_name = "death"
length = 2.0
step = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ittr2"]
resource_name = "idle_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_ejf8q"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 8]
}

[sub_resource type="Animation" id="Animation_2pynv"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3, 5]
}

[sub_resource type="Animation" id="Animation_p04ig"]
resource_name = "walk_down"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [9, 12]
}

[sub_resource type="Animation" id="Animation_2suro"]
resource_name = "walk_side"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [17, 20]
}

[sub_resource type="Animation" id="Animation_2kdo7"]
resource_name = "walk_up"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p04ig"]
_data = {
&"RESET": SubResource("Animation_41mm0"),
&"attack_down": SubResource("Animation_gy3q1"),
&"attack_side": SubResource("Animation_3mujp"),
&"attack_up": SubResource("Animation_xvinq"),
&"death": SubResource("Animation_pt0jy"),
&"idle_down": SubResource("Animation_ittr2"),
&"idle_side": SubResource("Animation_ejf8q"),
&"idle_up": SubResource("Animation_2pynv"),
&"walk_down": SubResource("Animation_p04ig"),
&"walk_side": SubResource("Animation_2suro"),
&"walk_up": SubResource("Animation_2kdo7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_oucfp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ekl84"]
radius = 20.0

[sub_resource type="Animation" id="Animation_exelp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_33iwi"]
resource_name = "damaged"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.19607843), Color(1, 1, 1, 1), Color(1, 1, 1, 0.19607843), Color(1, 1, 1, 1), Color(1, 1, 1, 0.19607843), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("13_ekl84")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_vwfor"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pt0jy"]
_data = {
&"RESET": SubResource("Animation_exelp"),
&"damaged": SubResource("Animation_33iwi"),
&"default": SubResource("Animation_vwfor")
}

[node name="Player" type="CharacterBody2D" unique_id=1951096566 node_paths=PackedStringArray("animation_player", "entity_sprite", "health_component", "hit_box", "hurt_box", "state_machine")]
top_level = true
collision_mask = 19
script = ExtResource("1_cvnsp")
animation_player = NodePath("AnimationPlayer")
entity_sprite = NodePath("Sprite2D")
health_component = NodePath("HealthComponent")
hit_box = NodePath("HitBox")
hurt_box = NodePath("Interactions/HurtBox")
state_machine = NodePath("StateMachine")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1284913257]
show_behind_parent = true
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_ittr2")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=939325248]
position = Vector2(0, -23)
texture = ExtResource("2_cvnsp")
hframes = 16
vframes = 3

[node name="ShadowSprite" type="Sprite2D" parent="Sprite2D" unique_id=992877495]
modulate = Color(0, 0, 0, 0.49019608)
show_behind_parent = true
position = Vector2(0, 20)
texture = ExtResource("3_ekl84")

[node name="AttackEffectSprite" type="Sprite2D" parent="Sprite2D" unique_id=673616794]
position = Vector2(0, 10)
texture = ExtResource("4_ekl84")
hframes = 12

[node name="AttackEffectAnimation" type="AnimationPlayer" parent="Sprite2D/AttackEffectSprite" unique_id=370046946]
libraries/ = SubResource("AnimationLibrary_ronts")
autoplay = &"no_attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1772431849]
libraries/ = SubResource("AnimationLibrary_p04ig")

[node name="HealthComponent" parent="." unique_id=702080129 instance=ExtResource("3_41mm0")]
position = Vector2(0, -23)

[node name="HitBox" parent="." unique_id=983766842 instance=ExtResource("11_vwfor")]
position = Vector2(0, -23)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" unique_id=2140502692]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_oucfp")
debug_color = Color(0.56197894, 0.5571533, 0.14572686, 0.41960785)

[node name="StateMachine" type="Node" parent="." unique_id=1976067012]
script = ExtResource("7_u3c1g")

[node name="Idle" type="Node" parent="StateMachine" unique_id=1092944920]
script = ExtResource("6_2suro")

[node name="Walk" type="Node" parent="StateMachine" unique_id=142194563]
script = ExtResource("7_gy3q1")

[node name="Attack" type="Node" parent="StateMachine" unique_id=1228722913]
script = ExtResource("8_2suro")
attack_sound = ExtResource("11_ekl84")

[node name="Stun" type="Node" parent="StateMachine" unique_id=862125443]
script = ExtResource("12_vwfor")

[node name="Death" type="Node" parent="StateMachine" unique_id=770125279]
script = ExtResource("13_exelp")
death_audio = ExtResource("14_33iwi")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1916636438]
position = Vector2(0, -8)
offset = Vector2(0, -4)

[node name="Audio" type="Node2D" parent="." unique_id=2075541751]
position = Vector2(0, -23)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio" unique_id=1618167776]
max_polyphony = 4

[node name="Interactions" type="Node2D" parent="." unique_id=1508150987]
unique_name_in_owner = true
position = Vector2(0, -23)

[node name="HurtBox" parent="Interactions" unique_id=1664989607 instance=ExtResource("11_oucfp")]
position = Vector2(0, 16)
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/HurtBox" unique_id=281246918]
shape = SubResource("CircleShape2D_ekl84")
debug_color = Color(0.9536719, 0.20807242, 0.16435587, 0.41960785)

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="." unique_id=1411569256]
libraries/ = SubResource("AnimationLibrary_pt0jy")
